[package]
name = "cobalt-strikeout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo"] }
color-eyre = "0.6.2"
libc = "0.2.151"
prctl = "1.0.0"
rlimit = "0.10.1"
socket = "0.0.7"
which = "5.0.0"
