[package]
name = "cobalt-strikeout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
groups = "0.1.1"
libc = "0.2.151"
memmap = "0.7.0"
nix = { version = "0.27.1", features = ["process", "mount", "fs"] }
notify = "6.1.1"
prctl = "1.0.0"
regex = "1.10.2"
rlimit = "0.10.1"
socket2 = "0.5.5"
users = "0.11.0"
which = "5.0.0"
